# res://game/game_main.gd
extends Node2D

# è¿·é›¾å›¾å—çš„ Source ID å’Œ Atlas Coords
# è¯·æ ¹æ®æ‚¨çš„ fog_tileset.tres å®é™…æƒ…å†µä¿®æ”¹ï¼
# é€šå¸¸ ID æ˜¯ 0ï¼Œåæ ‡æ˜¯ (0,0)
const FOG_SOURCE_ID = 0 
const FOG_ATLAS_COORD = Vector2i(0, 0)

# --- å±æ€§ ---
const MAX_SUPPLIES = 100

# å®šä¹‰æˆ˜åˆ©å“æ±  (è·¯å¾„åˆ—è¡¨)
const LOOT_EVENTS = [
	"res://game/events/event_loot_pickaxe.tres",
	"res://game/events/event_loot_raft.tres"
]

@onready var map_viewer = $HexMapViewer # ç¡®ä¿èŠ‚ç‚¹è·¯å¾„æ­£ç¡®
@onready var fog_layer = $FogLayer # ç¡®ä¿åœºæ™¯é‡Œæœ‰è¿™ä¸ªèŠ‚ç‚¹ï¼Œä¸”åå­—ä¸€è‡´
@onready var label_hp: Label = $HUD/MarginContainer/LeftSidebar/StatsPanel/HBoxContainer/LabelHP
@onready var label_supplies: Label = $HUD/MarginContainer/LeftSidebar/StatsPanel/HBoxContainer/LabelSupplies
@onready var result_window: CanvasLayer = $ResultWindow
@onready var system_menu = $HUD/SaveLoadMenu
@onready var inventory_list: VBoxContainer = $HUD/MarginContainer/LeftSidebar/InventoryList

# ç»‘å®šçª—å£
@onready var event_window: EventWindow = $HUD/EventWindow

var player: Player
var current_region: RegionData
var is_input_locked: bool = false # è¾“å…¥é”ï¼Œé˜²æ­¢ç§»åŠ¨ä¸­è¿ç‚¹
var current_supplies = 50 # åˆå§‹è¡¥ç»™
var current_hp = 3        # åˆå§‹ç”Ÿå‘½

# ç‰©å“æ¸…å• (ç®€å•çš„å­—ç¬¦ä¸²æ•°ç»„)
var inventory: Array[String] = []

# è®°å½•å½“å‰è§¦å‘çš„äº‹ä»¶ï¼Œæ–¹ä¾¿ç»“ç®—
var active_event: GameEvent

func _ready():
	randomize() # <--- æ ¸å¿ƒä¿®å¤ï¼šåˆå§‹åŒ–éšæœºæ•°ç§å­
	_init_test_level() # 1. å…ˆé€ åœ°
	_spawn_poi()       # 2. å†é€ ç»ˆç‚¹ (é‡‘è‰²)
	_spawn_loot()      # 3. å†é€ ç‰©èµ„ (è“è‰²)
	_init_fog()        # 4. æœ€åç›–é›¾
	_spawn_player()    # 5. æ”¾äºº
	
	# 3. è¿æ¥åœ°å›¾ç‚¹å‡»ä¿¡å· (HexMapViewer è‡ªå¸¦çš„ä¿¡å·)
	map_viewer.hex_clicked.connect(_on_hex_clicked)
	# ç›‘å¬ç©å®¶ç§»åŠ¨å®Œæˆï¼Œæ›´æ–°è¿·é›¾
	player.movement_finished.connect(_on_player_moved)

	SignalBus.locale_changed.connect(_update_ui)
	event_window.option_selected.connect(_on_event_option_selected)
	result_window.restart_requested.connect(_on_restart_game)
	
	_update_ui() # åˆå§‹åŒ– UI

# --- æ ¸å¿ƒï¼šå¤„ç†æ¸¸æˆç»“æŸ ---
func _check_game_over_condition():
	# å¤±è´¥åˆ¤å®šï¼šä½“åŠ›è€—å°½
	if current_supplies <= 0:
		_trigger_game_over(false, "ä½“åŠ›è€—å°½ï¼Œä½ å€’åœ¨äº†è’é‡ä¸­...")

# æ·»åŠ é“å…·
func add_item(item_key: String):
	# âœ… ç›´æ¥æ·»åŠ  (å…è®¸é‡å¤ï¼Œè¿™æ ·æ‰èƒ½å †å )
	inventory.append(item_key)
	_update_inventory_ui()
	print("è·å¾—é“å…·: ", item_key)

# --- æ–°å¢ï¼šæˆ˜åˆ©å“ç”Ÿæˆå‡½æ•° ---
func _spawn_loot():
	# 1. ç­›é€‰åˆæ³•æ ¼å­ (éæµ·ï¼Œä¸”æ— å…¶ä»–äº‹ä»¶)
	var valid_cells = current_region.hex_cells.filter(func(c): 
		return c.terrain != HexCell.TerrainType.OCEAN and c.linked_event == null
	)
	
	if valid_cells.size() < 3: return
	
	# å®šä¹‰æ‰è½æ±  (èµ„æºè·¯å¾„)
	var loot_pool = [
		"res://game/events/event_loot_pickaxe.tres",
		"res://game/events/event_loot_raft.tres"
	]
	
	# å¾ªç¯ç”Ÿæˆ 3 ä¸ª
	for i in range(3):
		var target_cell = valid_cells.pick_random()
		
		# å®ä¾‹åŒ– Marker
		var marker = load("res://game/objects/marker.tscn").instantiate()
		add_child(marker)
		marker.position = map_viewer.get_cell_center(target_cell.q, target_cell.r)
		
		# âœ… ä¿®å¤ 1: è®¾ç½®é¢œè‰² (è“è‰²ä»£è¡¨ç‰©èµ„)
		marker.modulate = Color(0.2, 0.6, 1.0) 
		
		# éšæœºé€‰ä¸€ä¸ªäº‹ä»¶
		var event_path = loot_pool.pick_random()
		target_cell.linked_event = load(event_path)
		
		# âœ… ä¿®å¤ 2: ç»‘å®šè§†è§‰å¯¹è±¡ (è‡³å…³é‡è¦)
		target_cell.visual_marker = marker
		
		# ä»æ± å­é‡Œç§»é™¤å·²ç”¨çš„æ ¼å­ï¼Œé˜²æ­¢é‡å  (è¿›é˜¶ä¼˜åŒ–)
		valid_cells.erase(target_cell)
		
		print("ç”Ÿæˆè“è‰²ç‰©èµ„äº: (%d, %d)" % [target_cell.q, target_cell.r])

# åˆ·æ–° UI (RimWorld é£æ ¼ï¼šç«–å‘åˆ—è¡¨)
func _update_inventory_ui():
	print("DEBUG: åˆ·æ–°ç‰©å“æ ï¼Œå½“å‰ inventory: ", inventory)
	
	# 1. ç¡®è®¤èŠ‚ç‚¹å­˜åœ¨
	if not inventory_list:
		print("DEBUG: é”™è¯¯ï¼æ‰¾ä¸åˆ° InventoryList èŠ‚ç‚¹")
		return

	# 2. æ¸…ç©ºæ—§åˆ—è¡¨
	for child in inventory_list.get_children():
		child.queue_free()
	
	# 3. ç»Ÿè®¡æ•°é‡ (ä½¿ç”¨æ›´ç¨³å¥çš„å†™æ³•)
	var item_counts = {}
	for item_key in inventory:
		var current_count = item_counts.get(item_key, 0) # è·å–å½“å‰å€¼ï¼Œæ²¡æœ‰åˆ™è¿”0
		item_counts[item_key] = current_count + 1
	
	print("DEBUG: ç»Ÿè®¡ç»“æœ: ", item_counts)

	# 4. ç”Ÿæˆ UI
	for item_key in item_counts.keys():
		var count = item_counts[item_key]
		var label = Label.new()
		
		# ç¿»è¯‘: item_raft -> ITEM_RAFT
		var tr_key = item_key.to_upper()
		var item_name = tr(tr_key)
		
		# å¦‚æœç¿»è¯‘å¤±è´¥ï¼ˆkeyæ²¡æ‰¾åˆ°ï¼‰ï¼Œträ¼šè¿”å›keyæœ¬èº«ã€‚
		# æˆ‘ä»¬å¯ä»¥åšä¸ªç¾åŒ–ï¼šå¦‚æœæ˜¯è‹±æ–‡ Keyï¼ŒæŠŠä¸‹åˆ’çº¿å»æ‰
		if item_name == tr_key:
			item_name = item_key.replace("item_", "").capitalize()
		
		# æ ¼å¼åŒ–
		if count > 1:
			label.text = "%s x%d" % [item_name, count]
		else:
			label.text = item_name
			
		# æ ·å¼
		label.label_settings = LabelSettings.new()
		label.label_settings.shadow_size = 2
		label.label_settings.shadow_color = Color.BLACK
		
		inventory_list.add_child(label)

# æ£€æŸ¥ç‰©å“
func has_item(item_id: String) -> bool:
	return item_id in inventory

func _unhandled_input(event):
	if event.is_action_pressed("ui_cancel"): # ESCé”®
		if system_menu.visible:
			system_menu.close_menu()
		else:
			system_menu.open_menu()

# è§¦å‘ç»“å±€
func _trigger_game_over(is_victory: bool, msg: String):
	is_input_locked = true # é”ä½æ“ä½œ
	result_window.show_result(is_victory, msg)

func _spawn_poi():
	# 1. ç­›é€‰åˆæ³•æ ¼å­ (éæµ·æ´‹)
	# çŸ©å½¢åœ°å›¾ç”Ÿæˆåï¼Œcurrent_region.hex_cells é‡Œåº”è¯¥å·²ç»å‰”é™¤äº†è¾¹ç¼˜æ·±æ¸Š
	# ä½†ä¸ºäº†ä¿é™©ï¼Œè¿˜æ˜¯ filter ä¸€ä¸‹
	var valid_cells = current_region.hex_cells.filter(func(c): 
		return c.terrain != HexCell.TerrainType.OCEAN
	)
	
	if valid_cells.size() < 2: return
	
	# 2. éšæœºé€‰å–ç»ˆç‚¹ (ç¦»èµ·ç‚¹è¿œä¸€ç‚¹æ›´å¥½ï¼Œè¿™é‡Œå…ˆéšæœº)
	var target_cell = valid_cells.pick_random()
	
	# 3. å®ä¾‹åŒ– Marker
	var marker_scene = load("res://game/objects/marker.tscn")
	var marker = marker_scene.instantiate()
	add_child(marker) # åŠ åˆ° GameMain ä¸‹ï¼Œå’Œ MapViewer å¹³çº§æˆ–æ›´ä¸‹
	
	# 4. è®¾ç½®ä½ç½®
	marker.position = map_viewer.get_cell_center(target_cell.q, target_cell.r)
	
	# 5. ç»‘å®šèƒœåˆ©äº‹ä»¶
	target_cell.linked_event = load("res://game/events/event_victory.tres")
	
	# ğŸŸ¢ æ–°å¢ï¼šå»ºç«‹è§†è§‰ç»‘å®š
	target_cell.visual_marker = marker
	print("DEBUG: Marker å·²ç»‘å®šåˆ°æ ¼å­ (%d, %d), å¯¹è±¡: %s" % [target_cell.q, target_cell.r, marker])
	
	print("ç»ˆç‚¹å·²ç”Ÿæˆäº: ", Vector2i(target_cell.q, target_cell.r))

# é‡å¼€é€»è¾‘
func _on_restart_game():
	# æœ€ç®€å•çš„é‡å¼€ï¼šé‡æ–°åŠ è½½å½“å‰åœºæ™¯
	get_tree().reload_current_scene()

# --- æ ¸å¿ƒï¼šUI æ›´æ–° (ä½¿ç”¨ i18n) ---
func _update_ui():
	# RimWorld é£æ ¼ï¼šå›¾æ ‡ + æ•°å€¼
	# æ³¨æ„ï¼šè¿™é‡Œæˆ‘ä»¬ä¸éœ€è¦ "è¡¥ç»™: 50"ï¼Œç›´æ¥ "ğŸ– 50" æ›´ç›´è§‚
	# å¦‚æœæ‚¨åšæŒè¦æ–‡å­—ï¼Œå¯ä»¥ç”¨ tr("GAME_STAT_SUPPLIES")
	
	label_supplies.text = "ğŸ– %d" % current_supplies
	label_hp.text = "â¤ï¸ %d" % current_hp
	
	# è§†è§‰è­¦ç¤º (å˜çº¢)
	if current_supplies <= 10:
		label_supplies.modulate = Color(1, 0.3, 0.3)
	else:
		label_supplies.modulate = Color.WHITE

# --- æ–°å¢ï¼šè¿·é›¾åˆå§‹åŒ– ---
func _init_fog():
	fog_layer.clear()
	
	# ç®€å•ç²—æš´ï¼šå¡«æ»¡ä¸€ä¸ªè¶³å¤Ÿå¤§çš„çŸ©å½¢åŒºåŸŸ
	# æˆ–è€…åªå¡«æ»¡ current_region.hex_cells æ¶‰åŠçš„åŒºåŸŸ
	# è¿™é‡Œæˆ‘ä»¬åªå¡«æ»¡æœ‰æ•°æ®çš„åŒºåŸŸï¼Œæ›´ç²¾å‡†
	for cell in current_region.hex_cells:
		var tile_pos = map_viewer.axial_to_tilemap(cell.q, cell.r)
		fog_layer.set_cell(tile_pos, FOG_SOURCE_ID, FOG_ATLAS_COORD)

# --- æ–°å¢ï¼šç©å®¶ç§»åŠ¨å›è°ƒ ---
func _on_player_moved(new_coords: Vector2i):
	print("ç©å®¶åˆ°è¾¾: ", new_coords)
	_update_fog(new_coords)

# --- æ–°å¢ï¼šæ›´æ–°è¿·é›¾ (æ“¦é™¤) ---
func _update_fog(center_hex: Vector2i):
	# å®šä¹‰è§†é‡åŠå¾„ (Radius)
	var vision_radius = 1
	
	# éå†å‘¨å›´æ ¼å­
	for q in range(-vision_radius, vision_radius + 1):
		for r in range(-vision_radius, vision_radius + 1):
			if abs(-q-r) <= vision_radius:
				# è®¡ç®—å®é™…åæ ‡
				var target_q = center_hex.x + q
				var target_r = center_hex.y + r
				
				# 1. æ“¦é™¤è¿·é›¾ (TileMap)
				var tile_pos = map_viewer.axial_to_tilemap(target_q, target_r)
				fog_layer.erase_cell(tile_pos)
				
				# 2. æ›´æ–°æ•°æ® (HexCell) -> æ ‡è®°ä¸ºå·²æ¢ç´¢ (ä¸ºæœªæ¥å­˜ç›˜åšå‡†å¤‡)
				var cell = current_region.get_hex(target_q, target_r) # éœ€ç¡®ä¿ RegionData æœ‰ get_hex
				if cell:
					cell.is_explored = true

func _init_test_level():
	var world = RegionData.new()
	world.name = "Unknown World"
	
	# ç”Ÿæˆåœ°å›¾
	MapGenerator.generate_rectangular_map(world, 20, 20, randi())
	
	current_region = world
	map_viewer.set_view_mode(HexMapViewer.ViewMode.PHYSICAL)
	map_viewer._on_world_loaded(world)

func _spawn_player():
	# å®ä¾‹åŒ–ç©å®¶
	var player_scene = load("res://game/player.tscn")
	player = player_scene.instantiate()
	
	# æ·»åŠ åˆ°åœºæ™¯ (å¿…é¡»åŠ åœ¨ map_viewer ä¹‹åï¼Œæˆ–è€… fog_layer ä¹‹ä¸‹)
	# å»ºè®®åŠ ä¸€ä¸ªä¸“é—¨çš„ EntityLayer èŠ‚ç‚¹æ¥æ”¾å•ä½ï¼Œè¿™é‡Œç›´æ¥ add_child
	add_child(player)
	
	# è®¾ç½®åˆå§‹ä½ç½®ï¼š(0, 0)
	var start_hex = Vector2i(0, 0)
	# è¿™ä¸€æ­¥å¾ˆå…³é”®ï¼šæˆ‘ä»¬éœ€è¦é—® map_viewer (0,0) çš„åƒç´ ä½ç½®åœ¨å“ª
	# æ³¨æ„ï¼š_get_cell_center æ˜¯ç§æœ‰å‡½æ•°å—ï¼Ÿå¦‚æœæ˜¯ï¼Œå»ºè®®æ”¹æˆå…¬æœ‰ get_cell_center
	# æˆ–è€…æˆ‘ä»¬å…ˆä¸´æ—¶ç”¨ HexMath ç®—ï¼Œåªè¦ä¹‹å‰å¯¹é½åšå¥½äº†å°±æ²¡é—®é¢˜
	# æœ€ä½³å®è·µï¼šå» HexMapViewer æŠŠ _get_cell_center æ”¹åä¸º get_cell_center (å»æ‰ä¸‹åˆ’çº¿)
	var start_pos = map_viewer.get_cell_center(start_hex.x, start_hex.y)
	
	player.setup(start_hex, start_pos)
	
	# ç«‹å³æ›´æ–°ä¸€æ¬¡è¿·é›¾
	_update_fog(start_hex)

# --- æ ¸å¿ƒï¼šè·å–ç§»åŠ¨æ¶ˆè€— ---
func _get_move_cost(cell: HexCell) -> int:
		# --- ç‰¹æ®Šåœ°å½¢åˆ¤æ–­ ---
	# 1. æ²³æµ/æ·±æ°´ (åŸæœ¬ä¸å¯é€šè¿‡ï¼Œç°åœ¨æœ‰æœ¨ç­å¯è¿‡)
	# å‡è®¾æˆ‘ä»¬åœ¨ç”Ÿæˆå™¨é‡ŒæŠŠä¸€éƒ¨åˆ†æ°´åŸŸæ ‡è®°ä¸ºäº†å¯é€šè¡Œçš„æµ…æ°´ï¼Œæˆ–è€…å°±æ˜¯ OCEAN
	# æ³¨æ„ï¼šä¹‹å‰ _on_hex_clicked é‡Œæœ‰ä¸ªæ‹¦æˆª "if terrain == OCEAN: return"
	# æˆ‘ä»¬éœ€è¦å»æ”¹é‚£é‡Œï¼Œæˆ–è€…åœ¨è¿™é‡Œå¤„ç†æ¶ˆè€—
	
	# 2. å±±è„‰ (æœ‰é•å­å‡è€—)
	if cell.terrain == HexCell.TerrainType.MOUNTAIN:
		if "item_pickaxe" in inventory:
			return 1 # æœ‰é•å­ï¼Œå¦‚å±¥å¹³åœ°
		else:
			return 3 # æ²¡é•å­ï¼Œçˆ¬æ­»ä½ 
			
	# 3. æ£®æ— (æœ‰ç åˆ€å‡è€—)
	if cell.terrain == HexCell.TerrainType.FOREST:
		if "item_machete" in inventory:
			return 1
		else:
			return 2

	if cell.terrain == HexCell.TerrainType.OCEAN:
		return 2 # 4. åˆ’èˆ¹ä¹ŸæŒºç´¯

	match cell.terrain:
		HexCell.TerrainType.PLAINS: return 1
		HexCell.TerrainType.FOREST: return 2
		HexCell.TerrainType.HILLS: return 2
		HexCell.TerrainType.MOUNTAIN: return 3
		HexCell.TerrainType.DESERT: return 3
		HexCell.TerrainType.SNOW: return 3
		_: return 1

# --- æ ¸å¿ƒï¼šç‚¹å‡»å¤„ç† ---
func _on_hex_clicked(target_hex: Vector2i):
	if is_input_locked: return
	
	var p_hex = player.hex_coords
	var a = HexCell.new(); a.q = p_hex.x; a.r = p_hex.y
	var b = HexCell.new(); b.q = target_hex.x; b.r = target_hex.y
	var dist = HexMath.get_distance(a, b)
	
	if dist != 1:
		print(tr("GAME_MSG_TOO_FAR"))
		return

	var cell = current_region.get_hex(target_hex.x, target_hex.y)
	if not cell: return
	
	if cell.terrain == HexCell.TerrainType.OCEAN:
		# ç®€å•åˆ¤æ–­ï¼šå¦‚æœæœ‰æœ¨ç­åˆ™é€šè¿‡ï¼Œæ²¡æœ‰åˆ™é˜»æŒ¡
		if "item_raft" in inventory:
			pass
		else:
			print(tr("GAME_MSG_OCEAN"))
			return
	
	var cost = _get_move_cost(cell)
	
	if current_supplies >= cost:
		is_input_locked = true
		current_supplies -= cost
		_update_ui()
		
		_update_fog(target_hex)
		var target_pos = map_viewer.get_cell_center(target_hex.x, target_hex.y)
		
		player.move_to(target_hex, target_pos)
		
		await player.movement_finished
		is_input_locked = false
		
		# --- äº‹ä»¶ä¸é”€æ¯é€»è¾‘ ---
		if cell.linked_event:
			print("!!! è§¦å‘äº‹ä»¶ï¼Œå¼€å§‹æ¸…ç†æµç¨‹ !!!")
			
			# 1. å…ˆé”€æ¯è§†è§‰å¯¹è±¡ (æœ€ä¼˜å…ˆæ‰§è¡Œ)
			if cell.visual_marker:
				print("!!! æ­£åœ¨é”€æ¯ Marker: ", cell.visual_marker)
				cell.visual_marker.queue_free()
				cell.visual_marker = null # æ–­å¼€å¼•ç”¨
			else:
				print("!!! è­¦å‘Š: æ ¼å­æœ‰äº‹ä»¶ï¼Œä½† visual_marker ä¸ºç©º (å¯èƒ½æ˜¯éšå½¢äº‹ä»¶) !!!")
			
			# 2. è§¦å‘å¼¹çª—
			_trigger_event(cell.linked_event)
			
			# 3. æ¸…ç©ºæ•°æ®é“¾æ¥
			cell.linked_event = null
			
	else:
		# è¡¥ç»™è€—å°½é€»è¾‘
		if current_hp > 0:
			print(tr("GAME_MSG_NO_SUPPLIES") + " HP -1")
			current_supplies = 0
			current_hp -= 1
			_update_ui()
			if current_hp <= 0:
				_trigger_game_over(false, tr("GAME_MSG_DEFEAT")) # ç¡®ä¿ CSV æœ‰è¿™ä¸ª Key
		else:
			_trigger_game_over(false, tr("GAME_MSG_DEFEAT"))

# è§¦å‘äº‹ä»¶çš„ä¸»å…¥å£
func _trigger_event(event_res: GameEvent):
	print(">>> è§¦å‘äº‹ä»¶: ", event_res.title)
	
	# 1. ç‰¹æ®Šäº‹ä»¶å¤„ç† (èƒœåˆ©/å¤±è´¥)
	if "event_type" in event_res and event_res.event_type == GameEvent.Type.VICTORY:
		_trigger_game_over(true, event_res.description)
		return

	# 2. ğŸ”´ å…³é”®ä¿®å¤ï¼šå¿…é¡»å…ˆèµ‹å€¼ç»™å…¨å±€å˜é‡ï¼
	active_event = event_res 
	
	# 3. é”å®šç©å®¶è¾“å…¥
	is_input_locked = true
	
	# 4. å¼¹å‡ºçª—å£
	if event_window:
		event_window.show_event(event_res)
	else:
		print("é”™è¯¯ï¼šEventWindow æœªè¿æ¥ï¼")

# å¤„ç†ç©å®¶é€‰æ‹©ç»“æœ
func _on_event_option_selected(index: int):
	# 1. å«å…µæ£€æŸ¥
	if active_event == null:
		print("âš ï¸ è­¦å‘Šï¼šactive_event ä¸ºç©ºï¼ç»“ç®—ä¸­æ­¢ã€‚")
		is_input_locked = false 
		return

	print("ç©å®¶é€‰æ‹©äº†é€‰é¡¹: ", index)
	
	# 2. å‡†å¤‡å˜é‡
	var cost_ap = 0
	var cost_hp = 0
	var item_to_give = "" # æå‰å®šä¹‰
	
	# 3. è¯»å–æ•°æ® (æ­¤æ—¶ active_event è¿˜æ˜¯æœ‰æ•ˆçš„)
	if index == 0: # Option A
		cost_ap = active_event.option_a_cost_ap
		cost_hp = active_event.option_a_cost_hp
		# âœ… å…³é”®ï¼šåœ¨è¿™é‡Œè¯»å–å¥–åŠ±
		item_to_give = active_event.option_a_give_item
		
	elif index == 1: # Option B
		cost_ap = active_event.option_b_cost_ap
		cost_hp = active_event.option_b_cost_hp
		item_to_give = active_event.option_b_give_item
		
	# 4. æ‰§è¡Œæ‰£è´¹
	current_supplies -= cost_ap
	# current_hp -= cost_hp
	
	# 5. æ‰§è¡Œå‘å¥– (âœ… åœ¨æ¸…ç©ºä¹‹å‰æ‰§è¡Œ)
	if item_to_give != "":
		add_item(item_to_give)
	
	# 6. åˆ·æ–° UI
	_update_ui()
	
	if current_supplies < 0: 
		current_supplies = 0
		print("å› ä¸ºäº‹ä»¶å¯¼è‡´ä½“åŠ›é€æ”¯ï¼")
	
	# 7. æ”¶å°¾ï¼šæ¢å¤æ“ä½œå¹¶æ¸…ç©ºç¼“å­˜ (âœ… å¿…é¡»æ”¾åœ¨æœ€å)
	is_input_locked = false
	active_event = null
